# Octo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: IAuth.h  IHost.h
src/Twitter/: TwitterHost.cpp  TwitterHost.h  TwitterOAuth.cpp  TwitterOAuth.h
test/: twitter_basic.cpp
